--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	
 	<div class = "container">
 	<p id = "info">
-		Welcome to Ariel's List!
+		<span style = "text-align: center; color: yellow; display:block; margin: auto" > Welcome to Ariel's List <br> A shopping list app for mermaid lovers! </span>
 		<br>
-		-Press Enter to enter an item
+		Press Enter to enter an item
 		<br>
 
 		-Press Backspace to delete the first item
